--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/FactoryTycoonNew.loader.js";
+      var loaderUrl = buildUrl + "/2.2.1.loader.js";
       var config = {
-        dataUrl: buildUrl + "/FactoryTycoonNew.data.unityweb",
-        frameworkUrl: buildUrl + "/FactoryTycoonNew.framework.js.unityweb",
-        codeUrl: buildUrl + "/FactoryTycoonNew.wasm.unityweb",
+        dataUrl: buildUrl + "/2.2.1.data.unityweb",
+        frameworkUrl: buildUrl + "/2.2.1.framework.js.unityweb",
+        codeUrl: buildUrl + "/2.2.1.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "NOKO Games",
         productName: "Factory Tycoon",
