--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/2.2.5.loader.js";
+      var loaderUrl = buildUrl + "/FactoryTycoonNewBuild.loader.js";
       var config = {
-        dataUrl: buildUrl + "/2.2.5.data.unityweb",
-        frameworkUrl: buildUrl + "/2.2.5.framework.js.unityweb",
-        codeUrl: buildUrl + "/2.2.5.wasm.unityweb",
+        dataUrl: buildUrl + "/FactoryTycoonNewBuild.data.unityweb",
+        frameworkUrl: buildUrl + "/FactoryTycoonNewBuild.framework.js.unityweb",
+        codeUrl: buildUrl + "/FactoryTycoonNewBuild.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "NOKO Games",
         productName: "Factory Tycoon",
