--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/FactoryTycoonNewBuild2.loader.js";
+      var loaderUrl = buildUrl + "/FactoryTycoonNewBuild2New.loader.js";
       var config = {
-        dataUrl: buildUrl + "/FactoryTycoonNewBuild2.data.unityweb",
-        frameworkUrl: buildUrl + "/FactoryTycoonNewBuild2.framework.js.unityweb",
-        codeUrl: buildUrl + "/FactoryTycoonNewBuild2.wasm.unityweb",
+        dataUrl: buildUrl + "/FactoryTycoonNewBuild2New.data.unityweb",
+        frameworkUrl: buildUrl + "/FactoryTycoonNewBuild2New.framework.js.unityweb",
+        codeUrl: buildUrl + "/FactoryTycoonNewBuild2New.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "NOKO Games",
         productName: "Factory Tycoon",
