--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/FactoryTycoonN.loader.js";
+      var loaderUrl = buildUrl + "/FactoryTycoonNn.loader.js";
       var config = {
-        dataUrl: buildUrl + "/FactoryTycoonN.data.unityweb",
-        frameworkUrl: buildUrl + "/FactoryTycoonN.framework.js.unityweb",
-        codeUrl: buildUrl + "/FactoryTycoonN.wasm.unityweb",
+        dataUrl: buildUrl + "/FactoryTycoonNn.data.unityweb",
+        frameworkUrl: buildUrl + "/FactoryTycoonNn.framework.js.unityweb",
+        codeUrl: buildUrl + "/FactoryTycoonNn.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "NOKO Games",
         productName: "Factory Tycoon",
