--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/FactoryTycoonNnn.loader.js";
+      var loaderUrl = buildUrl + "/FactoryTycoonLast.loader.js";
       var config = {
-        dataUrl: buildUrl + "/FactoryTycoonNnn.data.unityweb",
-        frameworkUrl: buildUrl + "/FactoryTycoonNnn.framework.js.unityweb",
-        codeUrl: buildUrl + "/FactoryTycoonNnn.wasm.unityweb",
+        dataUrl: buildUrl + "/FactoryTycoonLast.data.unityweb",
+        frameworkUrl: buildUrl + "/FactoryTycoonLast.framework.js.unityweb",
+        codeUrl: buildUrl + "/FactoryTycoonLast.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "NOKO Games",
         productName: "Factory Tycoon",
